Add Ingredient list to Lasagna recipe
I've added a list of ingredients with metric system

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,4 +7,22 @@
     It’s also easy to put together and make ahead of time,
     <br>so you can add it to your weekly dinner menu!</p>
     <br>
-    <h4>List of Ingredients</h4>
+    <h4>Ingredients</h4>
+    <ul>
+      <li>180 g dried red lentils</li>
+      <li>(2) 25-ounce jars marinara sauce</li>
+      <li>129 g raw cashews</li>
+      <li>454 g firm tofu patted dry</li>
+      <li>22 g nutritional yeast</li>
+      <li>3 tablespoons fresh lemon juice from about 2 lemons</li>
+      <li>1 teaspoon salt</li>
+      <li>1 teaspoon dried basil</li>
+      <li>1 teaspoon oregano</li>
+      <li>1/2 teaspoon garlic powder</li>
+      <li>60 g baby spinach</li>
+      <li>1 box lasagna noodles (about 12 noodles) regular, gluten free or whole grain</li>
+      <li>Double recipe Easy Vegan Mozzarella Cheese or 2-3 cups shredded vegan mozzarella</li>
+    </ul>
+    <ol>
+      <li>Cook the red lentils. Add 1 cup dried red lentils and 3 cups of water to a medium pot.<br> Bring to a boil, and then simmer for about 20 minutes.<br> Drain the lentils in a fine strainer, and then add back to the pot and stir in the marinara sauce. Set aside.</li>
+    </ol>
