Add Instructions to recipe
An ordered list pf how to make the lasagna,
added a lot of <br> elements, not sure if it's the
right way to break text?

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,13 +1,13 @@
-<h1>Lasagna</h1>
+<h1>Vegan Lasagna</h1>
   <img src="../images/vegan-lasagna.webp" height="400" width="300" alt="A delicious lasagna, freshly baked in the oven.">
-  <h3>Your most enjoyable, easy to make lasagna</h3>
+  <h2>Your most enjoyable, easy to make lasagna</h2>
     <p>I’ve tried so many different recipes for vegan lasagna; some with veggies throughout and others made with vegan meat.
       <br>Finally, I came up with this winning version that emphasizes comforting and ultra-satisfying bites using healthy,
       <br>nourishing ingredients, like cashews, red lentils, and spinach.
     It’s also easy to put together and make ahead of time,
     <br>so you can add it to your weekly dinner menu!</p>
     <br>
-    <h4>Ingredients</h4>
+<h3>Ingredients</h3>
     <ul>
       <li>180 g dried red lentils</li>
       <li>(2) 25-ounce jars marinara sauce</li>
@@ -23,6 +23,34 @@
       <li>1 box lasagna noodles (about 12 noodles) regular, gluten free or whole grain</li>
       <li>Double recipe Easy Vegan Mozzarella Cheese or 2-3 cups shredded vegan mozzarella</li>
     </ul>
+    <br>
+    <br>
+<h3>Instructions</h3>
     <ol>
-      <li>Cook the red lentils. Add 1 cup dried red lentils and 3 cups of water to a medium pot.<br> Bring to a boil, and then simmer for about 20 minutes.<br> Drain the lentils in a fine strainer, and then add back to the pot and stir in the marinara sauce. Set aside.</li>
+      <li><strong>Cook the red lentils.</strong> Add 1 cup dried red lentils and 3 cups of water to a medium pot.<br> 
+        Bring to a boil, and then simmer for about 20 minutes.<br> 
+        Drain the lentils in a fine strainer, and then add back to the pot and stir in the marinara sauce. Set aside.</li>
+      <br>
+      <li>Preheat the oven to 350 degrees.</li>
+      <br>
+      <li><strong>Make the Cashew-Tofu Ricotta:</strong> Add the cashews to a food processor and process until fine and crumbly.<br> 
+        Then add the tofu in chunks, nutritional yeast, lemon juice, salt, basil, oregano and garlic powder to the food processor.<br> 
+        Pulse until well combined and pretty smooth. If it's too thick, add a few tablespoons of water to blend. Set aside.</li>
+      <br>
+      <li><strong>Assembling the lasagna:</strong> Add about 1 cup of lentil marinara to the bottom of a large 9×13 inch casserole dish.<br> 
+        Spread it around evenly. Next add 4-5 lasagna noodles (uncooked). Spread half of the ricotta on top of the noodles.<br> 
+        Top with half of the spinach. Add about 1 cup of the marinara sauce over the spinach, then place 4-5 lasagna noodles on top. <br>
+        Spread the rest of the ricotta over the noodles, then the rest of the spinach. Place 4-5 more noodles on top of the spinach, <br>
+        and then pour the rest of the sauce over the top, evenly. </li>
+      <br>
+      <li>Cover tightly with foil and bake for 40 minutes.</li>
+      <br>
+      <li>While the lasagna is cooking, make your Vegan Mozzarella Cheese, if using. <br>
+         Alternatively, use 2-3 cups store bought vegan mozzarella cheese.</li>
+      <br>
+      <li>After 40 minutes, remove the foil and spoon on the mozzarella (or sprinkle the cheese all over). <br>
+         Place the lasagna back in the oven and bake for 20 more minutes, uncovered. <br>
+         Remove from oven, let cool for at least 15 minutes and serve.</li>
+      <br>
+      <li>Leftover lasagna will keep for about 4 days in the refrigerator. See notes for freezing instructions.</li>
     </ol>
