Add relative link to swepie.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">The best Vegan Lasagna on the <strong>local</strong> web</a></li>
-        <li></li>
+        <li><a href="recipes/lasagna.html"><strong><h3>The best Vegan Lasagna on the local web</h3></strong></a></li>
+        <li><a href="recipes/swepie.html"><strong><h3>Swedish classic Västerbotten cheese pie</h3></strong></a></li>
     </ul>
 
   </body>
