--- a/recipes/swepie.html
+++ b/recipes/swepie.html
@@ -1,12 +1,34 @@
-<h1>Västerbotten Cheese Pie</h1>
-<img src="../images/swepie.jpg" width="550" height="400" alt="A delicious slice of cheese pie on a blue and white plate, topped with fish rum and chime">
+<h1><ins>Västerbotten Cheese Pie</ins></h1>
+<img src="../images/swepie.jpg" width="550" height="400" alt="A delicious slice of cheese pie on a blue and white plate, topped with fish roe and chime">
 <br>
-<h2>Description</h2>
+<h2><ins>Description</ins></h2>
 <p>Some dishes sweep in and become a natural part of the tradition in only a few short years. That’s the case with Västerbottensostpaj, a pie made with Västerbotten cheese. According to food historian Rickard Tellström,
 the pie is the Swedish version of the French Quiche Lorraine, which became a big hit in the 80s.
 <br>
 The Västerbotten cheese pie is easy to make and to prepare in advance. You can guess how it sneaked into the hearts of the Swedes, right? <br>
 Yes, it was through smörgåsbord. Today, you can expect to find this golden pie at buffet tables at parties and celebrations such as Midsummer. It is pretty much mandatory for a Swedish crayfish party.</p>
 <br>
-<h2>Ingredients</h2>
+<h2><ins>Ingredients</ins></h2>
+<ul>
+<strong><ins>For the pie crust</ins></strong>
+    <li>3 dl (1 1/3 cup) flour</li>
+    <li>125 g (1/2 cup) cold butter</li>
+    <li>1-2 tbsp cold water</li>
+    <br>
+<strong><ins>For the filling</ins></strong>
+    <li>3 eggs</li>
+    <li>1 dl (2/5 cup) milk</li>
+    <li>1 dl (2/5 cup) cream</li>
+    <li>200 g (7 oz) Västerbotten cheese (or another flavorful cheese such as Cheddar)</li>
+    <li>1/2 tsp salt</li>
+    <li>1 pinch white pepper</li>
+<br>
+<strong><ins>Fish roe sauce (optional)</ins></strong>
+    <li>2 dl (4/5 cup) crème fraîche</li>
+    <li>3 tbsp fish roe</li>
+    <li>2 tbsp finely chopped dill</li>
+    <li>2 tbsp finely chopped dill</li>
+    <li>salt, pepper, and lemon juice to taste</li>
+</ul>
+<h2><ins>Instructions</ins></h2>
 
