Add underlining to headings

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,13 +1,13 @@
-<h1>Vegan Lasagna</h1>
+<h1><ins>Vegan Lasagna</ins></h1>
   <img src="../images/vegan-lasagna.webp" height="400" width="300" alt="A delicious lasagna, freshly baked in the oven.">
-  <h2>Description</h2>
+  <h2><ins>Description</ins></h2>
     <p>I’ve tried so many different recipes for vegan lasagna; some with veggies throughout and others made with vegan meat.
       <br>Finally, I came up with this winning version that emphasizes comforting and ultra-satisfying bites using healthy,
       <br>nourishing ingredients, like cashews, red lentils, and spinach.
     It’s also easy to put together and make ahead of time,
     <br>so you can add it to your weekly dinner menu!</p>
     <br>
-<h3>Ingredients</h3>
+<h3><ins>Ingredients</ins></h3>
     <ul>
       <li>180 g dried red lentils</li>
       <li>(2) 25-ounce jars marinara sauce</li>
@@ -25,7 +25,7 @@
     </ul>
     <br>
     <br>
-<h3>Instructions</h3>
+<h3><ins>Instructions</ins></h3>
     <ol>
       <li><strong>Cook the red lentils.</strong> Add 1 cup dried red lentils and 3 cups of water to a medium pot.<br> 
         Bring to a boil, and then simmer for about 20 minutes.<br> 
