Add body text for instructions
...in an ordered list.

--- a/recipes/swepie.html
+++ b/recipes/swepie.html
@@ -31,4 +31,19 @@ Yes, it was through smörgåsbord. Today, you can expect to find this golden pie
     <li>salt, pepper, and lemon juice to taste</li>
 </ul>
 <h3><ins>Instructions</ins></h3>
+<ol>
+    <li>Prepare the pie crust by mixing together the flour, butter, and one tablespoon of water in a large bowl until it comes together into a dough. <br>
+        I do this with my hands. If necessary, add another tablespoon of water, making it two in total. Wrap the dough in cling film and place it in the fridge for 20-60 minutes.</li>
+    <br>
+    <li>Set the oven to 200°C (390°F).</li>
+    <br>
+    <li>Make the filling by whisking together the eggs, milk, and cream together. Add the grated cheese. Season with salt and white pepper and stir until it is all well combined.</li>
+    <br>
+    <li>Take out the dough and press it out into a pie pan. Pick it with a fork and pre-bake the crust in the oven for 10 minutes.</li>
+    <br>
+    <li>Add the filling to the pre-baked pie crust. Bake in the oven for 20-25 minutes, until the filling has set and become a bit golden. <br>
+        Be careful so it doesn’t burn — add a bit of aluminum foil on top and bake the pie a bit longer if the surface is ready but the filling still loose when you move the pie. However, the pie will set a bit more after cooling. The pie is best served lukewarm.</li>
+    <br>
+    <li>If you want to make a simple cold fish roe sauce, take a small bowl and stir together crème fraîche with fish roe, chopped dill, and chopped onion. Season with salt, pepper, and a squirt of lemon juice according to your own taste.</li>
+</ol>
 
