--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html"><strong><h3>The best Vegan Lasagna on the local web</h3></strong></a></li>
-        <li><a href="recipes/swepie.html"><strong><h3>Swedish classic Västerbotten cheese pie</h3></strong></a></li>
+        <li><a href="recipes/swepie.html"><strong><h3>Swedish classic Västerbotten Cheese Pie</h3></strong></a></li>
+        <li><a href="recipes/sallad.html"><strong><h3>Delicious Quinoa Salad</h3></strong></a></li>
     </ul>
 
   </body>
