Add a list of ingredients to the sallad.html

--- a/recipes/sallad.html
+++ b/recipes/sallad.html
@@ -1,2 +1,26 @@
 <h1><ins>Delicious Quinoa Salad</ins></h1>
 <img src="../images/qsalad.webp" height="500" width="350" alt="A colorful quinoa salad with tomatoes, cucumber, red onions and parsley"> 
+<h2><ins>Description</ins></h2>
+  <p><strong>Introducing my favorite quinoa salad!</strong> I’ve published more than a few quinoa salads over the years and I genuinely love all of them, but this recipe is officially my favorite.</p>
+<br>
+<h3><ins>Ingredients</ins></h3>
+<ul>
+    <li>1 cup uncooked quinoa, rinsed in a fine-mesh colander</li>
+    <li>2 cups water</li>
+    <li>1 can (15 ounces) chickpeas, rinsed and drained, or 1 ½ cups cooked chickpeas</li>
+    <li>1 medium cucumber, seeded and chopped</li>
+    <li>1 medium red bell pepper, chopped</li>
+    <li>¾ cup chopped red onion (from 1 small red onion)</li>
+    <li>1 cup finely chopped flat-leaf parsley (from 1 large bunch)</li>
+    <li>¼ cup olive oil</li>
+    <li>¼ cup lemon juice (from 2 to 3 lemons)</li>
+    <li>1 tablespoon red wine vinegar</li>
+    <li>2 cloves garlic, pressed or minced</li>
+    <li>½ teaspoon fine sea salt</li>
+    <li>Freshly ground black pepper, to taste</li>
+</ul>
+<br>
+<h3><ins>Instructions</ins></h3>
+<ol>
+    
+</ol>
