--- a/recipes/sallad.html
+++ b/recipes/sallad.html
@@ -22,5 +22,13 @@
 <br>
 <h3><ins>Instructions</ins></h3>
 <ol>
-    
+    <li><strong>To cook the quinoa:</strong> Combine the rinsed quinoa and the water in a medium saucepan. Bring the mixture to a boil over medium-high heat, then decrease the heat to maintain a gentle simmer. Cook, uncovered, until the quinoa has absorbed all of the water, about 15 minutes, reducing heat as time goes on to maintain a gentle simmer. Remove from heat, cover, and let the quinoa rest for 5 minutes, to give it time to fluff up.</li>
+    <br>
+    <li>In a large serving bowl, combine the chickpeas, cucumber, bell pepper, onion and parsley. Set aside.</li>
+    <br>
+    <li>In a small bowl, combine the olive oil, lemon juice, vinegar, garlic and salt. Whisk until blended, then set aside.</li>
+    <br>
+    <li>Once the quinoa is mostly cool, add it to the serving bowl, and drizzle the dressing on top. Toss until the mixture is thoroughly combined. Season with black pepper, to taste, and add an extra pinch of salt if necessary. For best flavor, let the salad rest for 5 to 10 minutes before serving.</li>
+    <br>
+    <li>This salad keeps well in the refrigerator, covered, for about 4 days. Serve chilled or at room temperature.</li>
 </ol>
