Add detail and summary text as fig caption

--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin recipes</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
+  
     <ul>
         <li><a href="recipes/lasagna.html"><strong><h3>The best Vegan Lasagna on the local web</h3></strong></a></li>
         <li><a href="recipes/swepie.html"><strong><h3>Swedish classic Västerbotten Cheese Pie</h3></strong></a></li>
         <li><a href="recipes/sallad.html"><strong><h3>Delicious Quinoa Salad</h3></strong></a></li>
     </ul>
-
+    <figure>
+    <img class="pic1" src="images/Odin.png" alt="The Odin Project logo">
+    <figcaption><details id="pop"><summary class="big">How?!</summary>This online curriculum helped me along the way to create this website, and learn more about front-end development in general!</details></figcaption>
+    </figure>
   </body>
 
 
