Add class "recipes"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Odin Recipes</h1>
   
-    <ul>
+    <ul class="recipes">
         <li><a href="recipes/lasagna.html"><strong><h3>The best Vegan Lasagna on the local web</h3></strong></a></li>
         <li><a href="recipes/swepie.html"><strong><h3>Swedish classic Västerbotten Cheese Pie</h3></strong></a></li>
         <li><a href="recipes/sallad.html"><strong><h3>Delicious Quinoa Salad</h3></strong></a></li>
