Add pictures to links and make the list horizontal

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>Odin recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="h1"><ins>Odin Recipes</ins></h1>
   
-    <ul class="recipes">
-        <li><a href="recipes/lasagna.html"><strong><h3>The best Vegan Lasagna on the local web</h3></strong></a></li>
-        <li><a href="recipes/swepie.html"><strong><h3>Swedish classic Västerbotten Cheese Pie</h3></strong></a></li>
-        <li><a href="recipes/sallad.html"><strong><h3>Delicious Quinoa Salad</h3></strong></a></li>
+    <ul id="recipes">
+        <li><figure><a href="recipes/lasagna.html"><img class="lasagna" src="images/vegan-lasagna.webp" height="400" width="auto" alt="A delicious lasagna, freshly baked in the oven."><figcaption><strong><h3>The best Vegan Lasagna on the local web</h3></strong></a></figcaption></figure></li>
+        <li><figure><a href="recipes/swepie.html"><img class="swepie" src="images/swepie.jpg" width="550" height="400" alt="A delicious slice of cheese pie on a blue and white plate, topped with fish roe and chime"><figcaption><strong><h3>Swedish classic <lang swe>Västerbotten</lang> Cheese Pie</h3></strong></a></figcaption></figure></li>
+        <li><figure><a href="recipes/sallad.html"><img class="sallad" src="images/qsalad.webp" height="400" width="auto" alt="A colorful quinoa salad with tomatoes, cucumber, red onions and parsley"><figcaption><strong><h3>Delicious Quinoa Salad</h3></strong></a></figcaption></figure></li>
     </ul>
+
     <figure>
     <img class="pic1" src="images/Odin.png" alt="The Odin Project logo">
     <figcaption><details id="pop"><summary class="big">How?!</summary>This online curriculum helped me along the way to create this website, and learn more about front-end development in general!</details></figcaption>
